--- a/.azure-pipelines/ci-build.yml
+++ b/.azure-pipelines/ci-build.yml
@@ -100,7 +100,7 @@ extends:
                 displayName: Get current version
                 name: GetVersion
                 env:
-                  BRANCH_NAME: $(Build.SourceBranchName)
+                  BRANCH_NAME: $(Build.SourceBranch)
 
               - pwsh: |
                   .\scripts\ValidatePackageContents.ps1 -ArtifactId microsoft-kiota-abstractions -Version $(PACKAGE_VERSION) -ValidateMavenMetadata $false
