--- a/components/bundle/gradle/dependencies.gradle
+++ b/components/bundle/gradle/dependencies.gradle
@@ -1,11 +1,11 @@
 dependencies {
     // Use JUnit Jupiter API for testing.
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.13.3'
-    testRuntimeOnly("org.junit.platform:junit-platform-launcher")
+    testImplementation(libs.org.junit.jupiter.junit.jupiter)
+    testRuntimeOnly(libs.org.junit.platform.junit.platform.launcher)
 
-    testImplementation 'org.mockito:mockito-core:5.18.0'
+    testImplementation(libs.org.mockito.mockito.core)
 
-    implementation 'jakarta.annotation:jakarta.annotation-api:2.1.1'
+    implementation(libs.jakarta.annotation.jakarta.annotation.api)
 
     api project(':components:abstractions')
     api project(':components:http:okHttp')
