--- a/components/http/okHttp/gradle/dependencies.gradle
+++ b/components/http/okHttp/gradle/dependencies.gradle
@@ -1,18 +1,18 @@
 dependencies {
     // Use JUnit Jupiter API for testing.
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.13.3'
-    testRuntimeOnly("org.junit.platform:junit-platform-launcher")
+    testImplementation(libs.org.junit.jupiter.junit.jupiter)
+    testRuntimeOnly(libs.org.junit.platform.junit.platform.launcher)
 
-    testImplementation 'org.mockito:mockito-core:5.18.0'
-    testImplementation 'com.squareup.okhttp3:logging-interceptor:4.12.0'
-    testImplementation 'com.squareup.okhttp3:mockwebserver:4.12.0'
+    testImplementation(libs.org.mockito.mockito.core)
+    testImplementation(libs.com.squareup.okhttp3.logging.interceptor)
+    testImplementation(libs.com.squareup.okhttp3.mockwebserver)
 
 
     // This dependency is used internally, and not exposed to consumers on their own compile classpath.
-    implementation 'io.opentelemetry:opentelemetry-api:1.51.0'
-    implementation 'io.opentelemetry:opentelemetry-context:1.51.0'
-    implementation 'jakarta.annotation:jakarta.annotation-api:2.1.1'
-    api 'com.squareup.okhttp3:okhttp:4.12.0'
+    implementation(libs.io.opentelemetry.opentelemetry.api)
+    implementation(libs.io.opentelemetry.opentelemetry.context)
+    implementation(libs.jakarta.annotation.jakarta.annotation.api)
+    api(libs.com.squareup.okhttp3.okhttp)
 
     api project(':components:abstractions')
 }
